Optimized js code

--- a/LikingLikes_Index.html
+++ b/LikingLikes_Index.html
@@ -26,7 +26,7 @@
                     </div>
                     <div class="likes">
                         <p id="count">  like(s)</p>
-                        <button class="likeButton" onclick="add1()">Like</button>
+                        <button class="likeButton" onclick="add(0)">Like</button>
                     </div>
                 </div>
                 <div class="bottomCap">
@@ -40,7 +40,7 @@
                     </div>
                     <div class="likes">
                         <p id="count2"> like(s)</p>
-                        <button class="likeButton" onclick="add1two()">Like</button>
+                        <button class="likeButton" onclick=add(1)>Like</button>
                     </div>
                 </div>
                 <div class="bottomCap2">
@@ -54,7 +54,7 @@
                     </div>
                     <div class="likes3">
                         <p id="count3"> like(s)</p>
-                        <button class="likeButton" onclick="add1three()">Like</button>
+                        <button class="likeButton" onclick="add(2)">Like</button>
                     </div>
                 </div>
                 <div class="bottomCap3">
